ADMIN DASHBOARD LEFT ONLY

--- a/src/main/resources/com/example/sda/css/styles/view-feedback-style.css
+++ b/src/main/resources/com/example/sda/css/styles/view-feedback-style.css
@@ -12,7 +12,7 @@
 .content-wrapper {
     -fx-background-color: #0a0a0a;
     -fx-padding: 40;
-    -fx-min-height: 100vh;
+    -fx-min-height: 100;
     -fx-alignment: top-center;
 }
 
