--- a/src/main/resources/com/example/sda/fxml/auth/Registration.fxml
+++ b/src/main/resources/com/example/sda/fxml/auth/Registration.fxml
@@ -16,7 +16,11 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<StackPane styleClass="body" stylesheets="@../../css/styles/Registration.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sda.controllers.auth.RegistrationController">
+<StackPane styleClass="body"
+           stylesheets="@../../css/styles/Registration.css"
+           xmlns="http://javafx.com/javafx/21"
+           xmlns:fx="http://javafx.com/fxml/1"
+           fx:controller="com.example.sda.controllers.auth.RegistrationController">
 
     <!-- Main Container - HBox -->
     <!-- Added alignment and max sizes to ensure it fills the screen properly -->
